Closed Bug 452775 Opened 16 years ago Closed 16 years ago

Minefield Nightly fails to initiate dial-up login

Categories

(Core :: Networking, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1b1

People

(Reporter: malzilla, Assigned: mayhemer)

References

Details

(Keywords: regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a2pre) Gecko/20080828034823 Minefield/3.1a2pre Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a2pre) Gecko/20080828034823 Minefield/3.1a2pre After updating to Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a2pre) Gecko/20080828034823 Minefield/3.1a2pre ID:20080828034823 Opening Minefield fails to bring up the Dial-up connection box. I reverted to Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1a2pre) Gecko/20080826034105 Minefield/3.1a2pre And it brings up the dialogue and 20080827 worked as well. Reproducible: Always Steps to Reproduce: 1.Open Minefield 2.Fails to Bring up Dial-Up connection Box 3. Actual Results: Get a Failed to connect message Expected Results: Bring up Dial-Up Connection Box
Version: unspecified → Trunk
Blocks: 442806
Component: General → Networking
Keywords: regression
Product: Firefox → Core
QA Contact: general → networking
Flags: blocking1.9.1?
Will take a look at this.
Assignee: nobody → honzab
I can confirm that revision 18430 (3e41c4b388c3) IS _NOT_ causing this bug. Dialog still appears.
Blocks: 418703
No longer blocks: 442806
Brian, it seems you correctly change structures to be UNICODE (wide character XxxxW variant) but you still load XxxxA variants of functions in nsRASAutodial::LoadRASapi32DLL().
Blocks: 442806
No longer blocks: 418703
Blocks: 418703
No longer blocks: 442806
Changing load of 'A' function to 'W'. Tested, no crashes, dial-up pop-ups.
Attachment #336365 - Flags: review?(cbiesinger)
Comment on attachment 336365 [details] [diff] [review] Fix, v1 [Checkin: Comment 9] I should've caught this :/
Attachment #336365 - Flags: review?(cbiesinger) → review+
Keywords: checkin-needed
Ugh, thanks!
Summary: Minefield Nightly fails to initiate dial-up loggin → Minefield Nightly fails to initiate dial-up login
Sorry for the typo :(
Attachment #336365 - Attachment description: Fix, v1 → Fix, v1 [Checkin: Comment 9]
Status: NEW → RESOLVED
Closed: 16 years ago
Flags: blocking1.9.1?
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1b1
Since the fix for this landed if I try to navigate to a site thats down the Dial-Up Login Box comes up even though I am still connected. Do I need to file another Bug?
Blocks: 454381
Filed 454381
No longer blocks: 454381
Depends on: 454381
Since https://bugzilla.mozilla.org/show_bug.cgi?id=454381 Landed this has caused this bug to reoccur
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
(In reply to comment #13) > Since > https://bugzilla.mozilla.org/show_bug.cgi?id=454381 > Landed this has caused this bug to reoccur newly seen in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b2pre) Gecko/20081114 Minefield/3.1b2pre Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b2pre) Gecko/20081114 SeaMonkey/2.0a2pre But this bug is less annoying than Bug 454381 as lots of websites bring up the Dial-Up Login after having loaded some time and stop loading until the dialog is canceled. I'm reading on while new websites are loading in the background, so sometimes it takes some time till I notice the Dial-Up Login had come up in the tray. Bug 454381 - Minefield Nightly brings up Dial-Up Login if a website is unavailable
Malcolm, Allan, can you be more specific about conditions leading to this bug appearing? I was testing this quit a lot and it worked for me as expected, but I probably missed some scenario. What is your network config? How many network adapters do you have? In what state are when you expect the dialog to appear? Do you have some VPN adapters? Is there a proxy set? Thanks.
Sorry for the delay Honza. It's just a bog standard 56k external dial-up modem connecting through a phone line using com1. On a 2.6gig single processor pc running XPpro sp3 And all other programs Thunderbird, IE et'c fire the Dial-Up connection box. If you would like I can install the modem on another XP pc and do a clean install of Minefield to double check. But as I say it definitely regressed when the patch for 454381 landed :(
I had no doubts this regressed because of that bug. To be clear, you have just a modem and no other network card and you are not connecting to any VPN or don't have any virtual network adapters of any kind? Thanks for all info.
The pc does have an onboard nic Network Adapter Intel(R) PRO/100 VE Network Connection That is connected to my small home network through an old powered Dlink hub using standard CAT5. File and printer sharing is enabled. As you see it's a pretty standard small home LAN The other 3 XPpro pc's can share the internet connection do not have permission to do more than that.
And that is the problem. Now I understand, thanks. I changed the code to raise dial-up only when all adapters doesn't have any IP address. Your on board NIC has been assigned permanent address 192.168.0.1 and therefor my patch, causing this trouble, believes there is still a connection and prevents dial-up login. I have to think of a different approach for condition to start dial-up.
Reporting new bug for this issue. This particular bug has been fixed.
Status: REOPENED → RESOLVED
Closed: 16 years ago16 years ago
Resolution: --- → FIXED
Blocks: 465158
What's the new bug number?
The new bug is bug 465158.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: