Bug 452775 - Minefield Nightly fails to initiate dial-up login; r=cbiesinger